cmake_minimum_required(VERSION 3.14)
project(Compiler)

set(CMAKE_CXX_STANDARD 14)

add_executable(Compiler main.cpp WordAnalysis/WordAnalysis.h WordAnalysis/WordDealFunction.h TYPE.h SyntaxAnalysis/SyntaxAnalysis.h SyntaxAnalysis/SyntaxAnalyseFunction.h SyntaxAnalysis/CentencesAnalysis.h SyntaxAnalysis/ExpressionDeal.h WordAnalysis/SearchLine.h Errors/CompileError.h Errors/WordError.h Errors/NameDefineError.h SymbolTable/TableItem.h SymbolTable/SymbolTable.h Errors/FunctionParameterError.h Errors/SymbolError.h Codemid/FunctionBlock.h Codemid/MiddleCode.h Codemid/calculateExp.h Codemid/ExpressionMidCode.h Codemid/ItemMid.h Codemid/FactorMid.h Codemid/FunctionCallMid.h Codemid/IfelseBlock.h Codemid/WhileBlock.h Codemid/DoWhileBlock.h Codemid/ForLoopBlock.h Codemid/CentenceMid.h Codemid/AssignCentence.h Codemid/PrintfCentence.h Codemid/ScanfCentece.h Codemid/ReturnCentence.h MIPSCode/Variable.h MIPSCode/MipsGenerator.h Optim/Exp_OneBlock.h Optim/FlowGraph.h Optim/Optim_Functions.h Optim/FlowBlock.h Optim/InterferenceGraph.h)